--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="msa-container">
           <h5 class="msa-opacity"><b>Community Manager / Codecademy Rangpur</b></h5>
           <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>November 2021 - <span class="msa-tag msa-blue msa-round">Present</span></h6>
-          <p>I am the Community Manager for Codecademy Rangpur. My responsibilities are educating newbies and connecting with people to make a strong learning community. Sharing knowledge about the cutting edge and updated technology updates and resources with the community. Do check our community: <a href="https://community.codecademy.com/rangpur/">Codecademy.com/rangpur/</a></p>
+          <p>Having the role of a Community Manager for Codecademy Rangpur. My responsibilities are educating newbies and connecting with people to make a strong learning community. Sharing knowledge about the cutting edge and updated technology updates and resources with the community. Do check our community: <a href="https://community.codecademy.com/rangpur/">Codecademy.com/rangpur/</a></p>
           <hr>
         </div>
         <div class="msa-container">
           <h5 class="msa-opacity"><b>Campus Ambassador / AngelHack</b></h5>
           <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>August 2021 - <span class="msa-tag msa-red msa-round">Former</span></h6>
-          <p>Student Lead for the AngelHack Campus Hub - Government Shah Abdur Rouf College. Responsibilities are engaging with local developers communities to strengthen local ecosystems, bring together passionate individuals, and promote innovation. For more information, visit: <a href="https://angelhack.com">angelhack.com</a></p>
+          <p> Was playing the role of a student Lead for the AngelHack Campus Hub - Government Shah Abdur Rouf College. Responsibilities were engaging with local developers communities to strengthen local ecosystems, bring together passionate individuals, and promote innovation. For more information, visit: <a href="https://angelhack.com">angelhack.com</a></p>
           <hr>
         </div>
         <div class="msa-container">
@@ -133,7 +133,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="msa-container">
           <h5 class="msa-opacity"><b> IT and Media Sub Coordinator / BD Clean Pirganj</b></h5>
           <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>December 2019 - <span class="msa-tag msa-red msa-round">Former</span></h6>
-          <p>Taking pictures during events and posting about BD Clean hosted events. Setting up events on Facebook groups. Reminding members about events and keeping an eye on every member and their socials. Making people aware about cleanliness.</p><br>
+          <p>Multiple duties of taking pictures during events and posting about BD Clean-hosted events. Setting up events on Facebook groups. Reminding members about events and keeping an eye on every member and their socials. Making people aware about cleanliness.</p><br>
         <hr>
         </div>
         <div class="msa-container">
