--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="msa-container">
           <h5 class="msa-opacity"><b>Campus Ambassador / AngelHack</b></h5>
           <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>August 2021 - <span class="msa-tag msa-red msa-round">Former</span></h6>
-          <p> Was playing the role of a student Lead for the AngelHack Campus Hub - Government Shah Abdur Rouf College. Responsibilities were engaging with local developers communities to strengthen local ecosystems, bring together passionate individuals, and promote innovation. For more information, visit: <a href="https://angelhack.com">angelhack.com</a></p>
+          <p>Previously I was playing the role of a student Lead for the AngelHack Campus Hub - Government Shah Abdur Rouf College. Responsibilities were engaging with local developers communities to strengthen local ecosystems, bring together passionate individuals, and promote innovation. For more information, visit: <a href="https://angelhack.com">angelhack.com</a></p>
           <hr>
         </div>
         <div class="msa-container">
