--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="msa-container">
           <h5 class="msa-opacity"><b>Ambassador / Google Developer Group Dhaka</b></h5>
           <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>November 2022 - <span class="msa-tag msa-blue msa-round">Present</span></h6>
-          <p>Being an Ambassador for the GDG Dhaka I am responsible for outreach, promoting events, managing social media and so on things. Apart form that I also look for solutions to grow our community. . Do check our community: <a href="http://gdgdhaka.org">GDGDhaka.Org</a></p>
+          <p>Being an Ambassador for the GDG Dhaka I am responsible for outreach, promoting events, managing social media and so on things. Apart form that I also look for solutions to grow our community. . Do check our community: <a href="http://gdgdhaka.com">GDGDhaka.Com</a></p>
           <hr>
         </div>
         <div class="msa-container">
