--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
         <div class="msa-container">
           <h5 class="msa-opacity"><b>Community Manager / Codecademy Rangpur</b></h5>
-          <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>November 2021 - <span class="msa-tag msa-blue msa-round">Present</span></h6>
+          <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>November 2021 - <span class="msa-tag msa-red msa-round">Former</span></h6>
           <p>Having the role of a Community Manager for Codecademy Rangpur. My responsibilities are educating newbies and connecting with people to make a strong learning community. Sharing knowledge about the cutting edge and updated technology updates and resources with the community. Do check our community: <a href="https://community.codecademy.com/rangpur/">Codecademy.com/rangpur/</a></p>
           <hr>
         </div>
@@ -182,7 +182,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <i class="fa fa-twitter msa-hover-opacity"><a href="https://twitter.com/msaevan101"></a></i>
 <i class="fa fa-linkedin msa-hover-opacity"><a href="https://linkedin.com/in/msaevan101"></a></i>
   </div>
-  <p>Powered by <a href="https://msaevan.net" target="_blank">MSA Evan</a></p>
+  <p>Powered by <a href="https://msaevan.com" target="_blank">MSA Evan</a></p>
 </footer>
 
 </body>
