--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="msa-container">
-          <h5 class="msa-opacity"><b>Influnecer / Crowdsource By Google</b></h5>
+          <h5 class="msa-opacity"><b>Influencer / Crowdsource By Google</b></h5>
           <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>July 2020 - <span class="msa-tag msa-blue msa-round">Present</span></h6>
           <p>Becoming an influencer from a contributor, motivation behind was to make my mother language available in every product of Google. Responsibilities are hosting events, promoting Crowdsource events. Bringing new contributors, Teaching others how to make an impact, Helping others with their problems. Collaborating with other influencers cross borders to generate diversity.</p><br>
         <hr>
@@ -146,7 +146,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <h2 class="msa-text-grey msa-padding-16"><i class="fa fa-certificate fa-fw msa-margin-right msa-xxlarge msa-text-blue"></i>Education</h2>
         <div class="msa-container">
           <h5 class="msa-opacity"><b>Government Shah Abdur Rouf College</b></h5>
-          <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>2019 - 2021</h6>
+          <h6 class="msa-text-blue"><i class="fa fa-calendar fa-fw msa-margin-right"></i>2019 - 2022</h6>
           <p>High School</p>
           <hr>
         </div>
