--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="msa-container">
           <p><i class="fa fa-briefcase fa-fw msa-margin-right msa-large msa-text-blue"></i>Student</p>
           <p><i class="fa fa-home fa-fw msa-margin-right msa-large msa-text-blue"></i>Rangpur, Bangladesh</p>
-          <p><i class="fa fa-envelope fa-fw msa-margin-right msa-large msa-text-blue"> </i><a href="mailto:shahriar@sarc.edu.bd">shahriar@sarc.edu.bd</a></p>
+          <p><i class="fa fa-envelope fa-fw msa-margin-right msa-large msa-text-blue"> </i><a href="mailto:shahriar@powerposters.org">shahriar@powerposters.org</a></p>
           <p><i class="fa fa-phone fa-fw msa-margin-right msa-large msa-text-blue"></i>12345678910</p>
           <hr>
 
