--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="msa-white msa-text-grey msa-card-4">
         <div class="msa-display-container">
-          <img src="https://scontent.fdac27-2.fna.fbcdn.net/v/t39.30808-6/323397777_708713177355709_9146038284747541128_n.jpg?stp=cp6_dst-jpg&_nc_cat=100&ccb=1-7&_nc_sid=05bb41&_nc_eui2=AeHZ-Tlj-gHu9d6DTcyhaz874tL0DkOhRJPi0vQOQ6FEk66d1lg6T45M1Yg_tzOl-SF55Y0uIc1b-OG9Rbl2_y8I&_nc_ohc=NzAFvxjDH1wAX_havkh&_nc_ht=scontent.fdac27-2.fna&oh=00_AfA_ERY7fFdocj6GoP-JvufDYV0ZBmIDbSZpvKueXwtj9Q&oe=64F662A2" style="width:100%" alt="Avatar">
+          <img src="https://lh3.google.com/pw/ADCreHcjr-9YwIf6n1LD6POw-wJx6DkxGW6nGkRVSxBPlyLSGkHzljMxMz5zTSHeCYgbgm7lXjX1Hvix1EUrMIiKZFI_5ZTYcA=w1127-h845-s-no-gm?authuser=0" style="width:100%" alt="Avatar">
           <div class="msa-display-bottomleft msa-container msa-text-white">
             <h2>Shahriar</h2>
           </div>
